# Build-Server

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  TODOs.md  mkdocs.yml  openapi.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  init.sh  post-create.sh  requirements.txt
.github/workflows/: bastion.yaml  buildserver.yaml  cluster.yaml  deploy.yaml  runner.yaml  test.yaml
api/: config.py  main.py  requirements.txt
api/builder/: agent.py
api/builds/: models.py  service.py  views.py
api/database/: core.py  init_db.py
api/repository/: models.py  service.py  views.py
builder/: agent.py  builder.py  builder_test.py
buildserver/: config.py  main.py  rebuilder.py  utils.py
buildserver-api/: pyproject.toml  requirements.txt
buildserver-api/buildserver/: config.py  main.py  rebuilder.py  utils.py
buildserver-api/buildserver/database/: core.py  init_db.py  models.py
buildserver-api/buildserver/rmq/: rmq.py
buildserver-api/buildserver/services/: builds.py
buildserver-runner/: pyproject.toml
buildserver-runner/runner/: agent.py  config.py  main.py  types.py  utils.py
buildserver-runner/runner/builder/: builder.py
buildserver-runner/runner/rmq/: rmq.py
buildserver-runner/runner/tests/integration/: agent_test.py  builder_test.py
buildserver/agent/: agent.py
buildserver/agent/builder/: builder.py  rebuilder.py
buildserver/api/builds/: models.py  views.py
buildserver/api/jobs/: models.py
buildserver/artifacts/: artifactstore.py
buildserver/builder/: agent.py  builder.py  rebuilder.py
buildserver/builds/: models.py  service.py  views.py
buildserver/database/: core.py  init_db.py
buildserver/models/: jobs.py
buildserver/repository/: models.py  service.py  views.py
buildserver/rmq/: rmq.py
buildserver/services/: builds.py
buildserver/tests/: builder_test.py  utils_test.py
buildserver/tests/e2e/: conftest.py  test_build_flow.py
buildserver/tests/integration/: agent_test.py  builder_test.py  builds_service_test.py  conftest.py
buildserver/tests/unit/: job_test.py  rebuilder_test.py
docs/: api.md  api.rst  architecture.md  conf.py  getting-started.md  getting-started.rst  index.md  index.rst
infra/ansible/: site.yml
infra/ansible/bootstrap_cluster/: site.yml
infra/ansible/deploy_buildserver/: site.yml
infra/ansible/group_vars/: all.yml
infra/docker/: api.Dockerfile  runner.Dockerfile
plans/: TODOs.md  architecture.md  deployment_plan.md
protos/: registry.proto
protos/protos/: pyproject.toml
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  Dashboard.tsx  Header.tsx  config.ts  index.css
(+44 files in other folders)
