[project]
name = "buildserver"
dynamic = ["version"]
authors = [{name="Larry Banks"}]
description = "CI/CD System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pika",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "asgi-lifespan",
]

[project.urls]
Homepage = "https://github.com/larryb02/Build-Server"
Issues = "https://github.com/larryb02/Build-Server/issues"

[project.scripts]
buildserver = "buildserver.main:main"

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
include = ["buildserver*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
