[project]
name = "buildserver-runner"
dynamic = ["version"]
authors = [{name="Larry Banks"}]
description = "Execution node for buildserver"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika",
    "requests",
    "typer",
    "pydantic-settings",
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/larryb02/Build-Server"
Issues = "https://github.com/larryb02/Build-Server/issues"

[project.scripts]
buildserver-runner = "runner.main:app"

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
include = ["runner*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
